# web-scraper

./: Cargo.toml  README.md  URI.txt  jest.config.js  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.graphql  polywrap.test.cue  polywrap.test.yaml  polywrap.yaml
.github/workflows/: cd.yaml  ci.yaml
scraper/: Cargo.toml  package.json
scraper/src/: lib.rs
scraper/src/__tests__/e2e/: integration.spec.ts
src/: lib.rs
src/__tests__/e2e/: integration.spec.ts
src/__tests__/types/: polywrap.app.yaml  schema.graphql
