[package]
name = "template-wasm-rs"
version = "0.1.0"
description = "A Polywrap Wasm wrapper template written in Rust"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/monorepo"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.12.0" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
scraper = "0.12"
http = "0.2"
async-trait = "0.1"
futures = "0.3"


[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
